--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-DBSM2V8XBX"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-DBSM2V8XBX');
+</script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resource Wiki</title>
@@ -178,7 +187,7 @@
             font-size: 24px;
             font-family: 'Poppins', sans-serif;
         }
-
+        
         /* --- Footer & Flair --- */
         hr {
             border: 0; height: 30px; background-image: url('https://web.archive.org/web/20091027181055if_/http://geocities.com/hollywood/set/7338/flamingtextbar.gif');
@@ -196,6 +205,7 @@
             font-family: 'Poppins', sans-serif;
             font-size: 22px;
             margin-bottom: 15px;
+            color: #e0e0e0;
         }
         .beehiiv-embed {
             width: 100% !important;
@@ -292,6 +302,9 @@
                 <script async src="https://subscribe-forms.beehiiv.com/embed.js"></script>
                 <iframe src="https://subscribe-forms.beehiiv.com/62412e9b-49df-4d2e-b44b-2e6880784284?minimal=true" class="beehiiv-embed" data-test-id="beehiiv-embed" frameborder="0" scrolling="no" style="border-radius: 0px !important; background-color: transparent;"></iframe>
             </div>
+            <p style="margin-top: 30px;">
+                <a href="mailto:vancouverfilmdept@gmail.com" class="nav-btn" style="border-color: #e0e0e0;">Contact Me</a>
+            </p>
              <p>This page was last updated on: June 17, 2025</p>
              <p>!!! THANKS 4 VISITING !!!</p>
         </div>
