--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Resource Wiki</title>
+    <title>Vancouver Film Dept</title>
     <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><rect width='100' height='100' rx='15' fill='%231a1a2e'/><circle cx='50' cy='50' r='35' fill='none' stroke='%23e0e0e0' stroke-width='8'/><circle cx='50' cy='50' r='15' fill='%2387ceeb'/></svg>">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -296,17 +296,14 @@
         <!-- Static Footer -->
         <hr>
         <div id="footer" class="center-text">
-            <div class="newsletter-container">
-                <h3>Subscribe to Our Newsletter</h3>
-                <!-- Beehiiv Embed Code -->
-                <script async src="https://subscribe-forms.beehiiv.com/embed.js"></script>
-                <iframe src="https://subscribe-forms.beehiiv.com/62412e9b-49df-4d2e-b44b-2e6880784284?minimal=true" class="beehiiv-embed" data-test-id="beehiiv-embed" frameborder="0" scrolling="no" style="border-radius: 0px !important; background-color: transparent;"></iframe>
-            </div>
+            <p>
+                <a href="https://vancouverfilmdept.beehiiv.com/" target="_blank" class="nav-btn" style="border-color: #87ceeb; color: #87ceeb;">Subscribe to Newsletter</a>
+            </p>
             <p style="margin-top: 30px;">
                 <a href="mailto:vancouverfilmdept@gmail.com" class="nav-btn" style="border-color: #e0e0e0;">Contact Me</a>
             </p>
-             <p>This page was last updated on: June 17, 2025</p>
-             <p>!!! THANKS 4 VISITING !!!</p>
+             <p>This page was last updated on: June 26, 2025</p>
+             <p>!!! THANKS FOR VISITING !!!</p>
         </div>
     </div>
 
@@ -322,6 +319,7 @@
             { id: 'teamsters-155', name: 'Teamsters 155', category: 'Unions & Guilds', url: 'https://www.teamsters155.org/', description: 'Represents workers in transportation, security, catering...' },
             
             // Rentals (Sorted Alphabetically)
+            { id: 'big-baby', name: 'Big Baby Film Rentals', category: 'Rentals', url: 'https://bigbabyfilmrentals.com/', description: 'Props, set dec, and unique items for rent.' },
             { id: 'brightside-cinema', name: 'Brightside Cinema', category: 'Rentals', url: 'https://brightsidecinema.com/', description: 'Specializes in high-end digital cinema cameras and optics.' },
             { id: 'enlarge-vision', name: 'Enlarge Vision Rentals', category: 'Rentals', url: 'https://www.enlargevision.ca/', description: 'boutique rental house servicing Vertical Shorts.' },
             { id: 'inspired-image-rental', name: 'Inspired Image Picture Company Inc.', category: 'Rentals', url: 'https://inspiredimage.ca/', description: 'Full-service video production and equipment rentals.' },
