--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
         <nav id="main-nav">
             <button class="nav-btn" data-view="wiki-view">Wiki</button>
             <button class="nav-btn active" data-view="hub-view">Resource Hub</button>
-            <a href="https://www.creativebc.com/services/provincial-film-commission/in-production/" target="_blank" class="nav-btn">In Production</a>
+            <a href="https://www.creativebc.com/services/provincial-film-commission/in-production/" target="_blank" class="nav-btn">InProduction</a>
             <a href="https://old.reddit.com/r/VancouverFilmDept/" target="_blank" class="nav-btn">Message Board</a>
         </nav>
 
@@ -319,7 +319,6 @@
             { id: 'teamsters-155', name: 'Teamsters 155', category: 'Unions & Guilds', url: 'https://www.teamsters155.org/', description: 'Represents workers in transportation, security, catering...' },
             
             // Rentals (Sorted Alphabetically)
-            { id: 'big-baby', name: 'Big Baby Film Rentals', category: 'Rentals', url: 'https://bigbabyfilmrentals.com/', description: 'Props, set dec, and unique items for rent.' },
             { id: 'brightside-cinema', name: 'Brightside Cinema', category: 'Rentals', url: 'https://brightsidecinema.com/', description: 'Specializes in high-end digital cinema cameras and optics.' },
             { id: 'enlarge-vision', name: 'Enlarge Vision Rentals', category: 'Rentals', url: 'https://www.enlargevision.ca/', description: 'boutique rental house servicing Vertical Shorts.' },
             { id: 'inspired-image-rental', name: 'Inspired Image Picture Company Inc.', category: 'Rentals', url: 'https://inspiredimage.ca/', description: 'Full-service video production and equipment rentals.' },
@@ -353,7 +352,7 @@
 
             // Props & Set Dec
             { id: 'antique-alley', name: 'Antique Alley', category: 'Props & Set Dec', url: 'https://antiquealleymovieprops.com/', description: 'A prop house focused on antiques and vintage items...' },
-            { id: 'film-baby', name: 'Film Baby Rentals', category: 'Props & Set Dec', url: 'https://filmbaby.ca/', description: 'Specializes in props and set decoration for infants and children.' },
+            { id: 'big-baby', name: 'Big Baby Film Rentals', category: 'Props & Set Dec', url: 'https://bigbabyfilmrentals.com/', description: 'Props, set dec, and unique items for rent.' },
             { id: 'super-props', name: 'Super Props', category: 'Props & Set Dec', url: 'http://superprops.ca/', description: 'A large prop house specializing in hospital/medical props...' },
 
             // Expendables
